--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Areas/AccountAdmin/Pages/ManagePermissions/Edit.cshtml
@@ -18,16 +18,12 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-            @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Name", Model.Name, "Name"))
-
-            @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Email", Model.Email, $"/AccountAdmin/ManagePermissions/{Model.Id}/Email", "Edit", "Email"))
-
-            @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("Works for", Model.Organisation, "Organisation"))
-
-            @await Html.PartialAsync("_checkDetailRow", new CheckDetailsRowModel("What they do", Model.Role, $"/AccountAdmin/ManagePermissions/{Model.Id}/Roles", "Edit", "Role"))
-
-        </dl>
+        <summary-list>
+            <summary-row key="Name">@Model.Name</summary-row>
+            <summary-row key="Email" action1="Edit" action1-href="@Url.PageLink("EditEmail", values: new { AccountId = Model.Id })">@Model.Email</summary-row>
+            <summary-row key="Works for">@Model.Organisation</summary-row>
+            <summary-row key="What they do" action1="Edit" action1-href="@Url.PageLink("EditRoles", values: new { AccountId = Model.Id })">@Model.Role</summary-row>
+        </summary-list>
         <p><a href="@Model.BackPath">Back to manage user accounts</a></p>
     </div>
 </div>
