FHG-4817 update phone number, change text

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
@@ -21,7 +21,7 @@
         
         @if (Model.OrganisationName != null)
         {
-            <p>Only locations that have been added for your @Model.OrganisationName will appear here.</p>
+            <p>Only locations that have been added for @Model.OrganisationName will appear here.</p>
         }
 
         <form method="post" novalidate>
