update content wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Add-Confirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Add-Confirmation.cshtml
@@ -12,7 +12,9 @@
             </h1>
         </div>
 
-        <h2 class="govuk-heading-m">Placeholder</h2>
+        <h2 class="govuk-heading-m">What happens next</h2>
+        
+        <p>People can now find this service on the directory. You can <a asp-page="">view and edit your services</a>.</p>
 
         <a class="govuk-button" asp-page="/Welcome">Return to homepage</a>
     </div>
