fix typo (FHG-5099) + fix some warnings

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-More-Details-Content.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-More-Details-Content.cshtml
@@ -1,9 +1,9 @@
 ﻿<h1 class="govuk-label--l">
-    Give more details about this service
+    @ViewData["Title"]
 </h1>
 <p class="govuk-!-margin-bottom-1">Tell people anything else they need to about using this service, such as:</p>
 <ul class="govuk-list govuk-list--bullet">
-    <li>different age ranges for people whith special educational needs and disabilities ( SEND )</li>
+    <li>different age ranges for people with special educational needs and disabilities ( SEND )</li>
     <li>if they need to book and how to do this</li>
     <li>any accessibility support offered</li>
 </ul>
