add a bit of a gap between the panel and the rest of the page on the service/location confirmation pages

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/LocationAddedConfirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-locations/LocationAddedConfirmation.cshtml
@@ -6,7 +6,7 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <div class="govuk-panel govuk-panel--confirmation">
+        <div class="govuk-panel govuk-panel--confirmation govuk-!-margin-bottom-8">
             <h1 class="govuk-panel__title">
                 Location added
             </h1>
