--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
@@ -16,11 +16,11 @@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-l">Search and select a location to add to this service</h1>
+        <h1 class="govuk-heading-l">@ViewData["Title"]</h1>
         
-        @if (Model.OrganisationName != null)
+        @if (Model.OrganisationType != null)
         {
-            <p>Only locations that have been added for @Model.OrganisationName will appear here.</p>
+            <p>Only locations that have been added for your @Model.OrganisationType will appear here.</p>
         }
 
         <form method="post" novalidate>
