remove location content wip

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Remove-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Remove-Location.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.Remove_LocationModel
 @{
-    ViewData["Title"] = Model.Legend;
+    ViewData["Title"] = Model.Title;
 }
 
 @section Back {
