new titles for the service schedule page

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model FamilyHubs.ServiceDirectory.Admin.Web.Pages.manage_services.timesModel
 @{
-    ViewData["Title"] = "On which days can people use this service?";
+    ViewData["Title"] = Model.Title;
 }
 
 @section Back {
