--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times-content.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/times-content.cshtml
@@ -1,3 +1,3 @@
-﻿<h1 class="govuk-heading-l">On which days can people use this service?</h1>
+﻿<h1 class="govuk-heading-l">@ViewData["Title"]</h1>
 
 <p>Let people know about the days when this service is available. You can provide more specific details about availability on the next page.</p>
