--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Select-Location.cshtml
@@ -41,7 +41,10 @@
                 </select>
             </div>
 
-            <p>If the location does not appear here you can <a href="/manage-locations/start-add-location?journey=@Journey.Service">add a new location</a>.</p>
+@*             <p>If the location does not appear here you can <a href="/manage-locations/start-add-location?journey=@(Journey.Service)-@(Model.Flow)">add a new location</a>.</p> *@
+            @*             <p>If the location does not appear here you can <a href="/manage-locations/start-add-location?journey=@Journey.Service">add a new location</a>.</p>
+ *@
+            <p>If the location does not appear here you can <a href="/manage-locations/start-add-location?journey=@Journey.Service&parentJourneyFlow=@Model.Flow">add a new location</a>.</p>
 
             <button type="submit" class="govuk-button" data-module="govuk-button">
                 Continue
