On the service details page, if the user has selected ‘In person’ and added locations, don’t show ‘In person’ in the heading in the ‘Using this service’ section. When a person has selected ‘In person’ and added locations, we capture and display a schedule for each location, and the schedule associated with the service (if there is one) is only relevant for Online/Telephone, so it doesn’t make sense to include ‘In person’ in the heading.

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -172,10 +172,18 @@
             }
         }
 
-        @if (service.HowUse.Any(hu => hu is AttendingType.Online or AttendingType.Telephone)
-        || (service.HowUse.Contains(AttendingType.InPerson) && locationsCount == 0))
+        @{
+            List<AttendingType> howUse = new();
+            if (locationsCount == 0 && service.HowUse.Contains(AttendingType.InPerson))
+            {
+                howUse.Add(AttendingType.InPerson);
+            }
+            howUse.AddRange(service.HowUse.Where(hu => hu != AttendingType.InPerson));
+        }
+
+        @if (howUse.Any())
         {
-            <h3 class="govuk-heading-m">@string.Join(", ", service.HowUse.Select(h => h.ToDescription()))</h3>
+            <h3 class="govuk-heading-m">@string.Join(", ", howUse.Select(h => h.ToDescription()))</h3>
             <summary-list class="govuk-!-margin-bottom-9">
                 <summary-row key="Days service is available" show-empty
                              action1="Change" action1-href="@Model.GetServicePageUrl(ServiceJourneyPage.Times, linkFlow)">
