--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Add-Confirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Add-Confirmation.cshtml
@@ -16,6 +16,6 @@
         
         <p>People can now find this service on the directory. You can <a asp-page="/manage-services/index">view and edit your services</a>.</p>
 
-        <a class="govuk-button" asp-page="/Welcome">Return to homepage</a>
+        <a class="govuk-button" asp-page="/Welcome">Go to homepage</a>
     </div>
 </div>
