--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Locations-For-Service.cshtml
@@ -6,7 +6,6 @@
     string title = $"Locations for {Model.ServiceModel!.Name}";
     ViewData["Title"] = title;
 
-    var linkFlow = Model.Flow;
     string redo = ServiceJourneyPage.Locations_For_Service.GetSlug();
 
     bool hasLocations = Model.Locations.Any();
@@ -37,7 +36,7 @@
                 {
                     ++locationIndex;
                     <summary-card title="Location @locationIndex"
-                                  action1="Remove location from this service" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Remove_Location, linkFlow))&locationId=@location.Id">
+                                  action1="Remove location from this service" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Remove_Location))&locationId=@location.Id">
                         <summary-row key="Address" class="fh-pre-wrap">@string.Join(Environment.NewLine, location.Address)</summary-row>
                         <summary-row key="Family hub">
                             @* todo: common, add to display code *@
@@ -45,11 +44,11 @@
                         </summary-row>
                         <summary-row key="Location details" class="fh-pre-wrap">@location.Description</summary-row>
                         <summary-row key="Days service is available" show-empty
-                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Times_At_Location, linkFlow))&locationId=@location.Id&redo=@redo">
+                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Times_At_Location))&locationId=@location.Id&redo=@redo">
                             @location.Times.GetDayNames()
                         </summary-row>
                         <summary-row key="Extra availability details" show-empty class="fh-pre-wrap"
-                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Time_Details_At_Location, linkFlow))&locationId=@location.Id&redo=@redo"
+                                     action1="Change" action1-href="@(Model.GetServicePageUrl(ServiceJourneyPage.Time_Details_At_Location))&locationId=@location.Id&redo=@redo"
                                      >@(string.IsNullOrEmpty(location.TimeDescription) ? "None provided" : location.TimeDescription)</summary-row>
                     </summary-card>
                 }
